k8s/devteam-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev2-httpbin
spec:
  ports:
    - protocol: TCP
      port: 80
  type: ExternalName
  externalName: httpbin.org
